Fix images heights, make catalog list in one col on mobile ver

--- a/nikanew/css/main.css
+++ b/nikanew/css/main.css
@@ -803,7 +803,7 @@ input[type=submit][disabled] {
     font-size: 20px;
   }
 }
-@media (max-width: 374.98px) {
+@media (max-width: 370px) {
   .logo {
     margin-right: 10px;
   }
@@ -813,6 +813,9 @@ input[type=submit][disabled] {
   }
   .tabsNav > li a {
     font-size: 11px;
+  }
+  .menuOpen {
+    padding: 15px 10px;
   }
 }
 .fancybox-lock {
@@ -1727,6 +1730,16 @@ input[type=submit][disabled] {
   .projects__infoBtns {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+@media (max-width: 992px) {
+  .projects__img {
+    height: auto;
+    -o-object-fit: unset;
+    object-fit: unset;
+  }
+  .projects__title {
+    margin-top: -38px;
   }
 }
 @media (max-width: 768px) {
@@ -3980,6 +3993,9 @@ input[type=submit][disabled] {
     font-weight: 500;
     font-size: 11px;
   }
+  .catalog__btns > li .xbtn:hover::before {
+    opacity: 0;
+  }
   .catalog__text {
     margin-bottom: 7px;
     text-align: left;
@@ -4071,51 +4087,86 @@ input[type=submit][disabled] {
 }
 @media (max-width: 576px) {
   .catalog__list {
-    -ms-grid-columns: (1fr)[2];
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .catalog__link {
-    height: 26.5vw;
-  }
-  .catalog__content {
-    padding: 7px 4px 12px;
-  }
-  .catalog__priceDesc {
-    font-size: 12px;
-  }
-  .catalog__priceText {
-    font-size: 12px;
-  }
-  .catalog__title {
-    font-size: 13px;
-  }
-  .catalog__square {
-    font-size: 12px;
-  }
-}
-@media (max-width: 360px) {
-  .catalog__list {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 23px;
   }
   .catalog__link {
     height: 51.5vw;
   }
+  .catalog__itemMain {
+    margin-top: 0;
+  }
+  .catalog__content {
+    padding: 7px 4px 12px;
+  }
+  .catalog__add {
+    padding: 6px 18px 14px 21px;
+  }
+  .catalog__priceDesc {
+    display: block;
+  }
+  .catalog__priceText {
+    font-size: 16px;
+  }
+  .catalog__title {
+    font-size: 16px;
+  }
+  .catalog__more {
+    display: block;
+  }
+  .catalog__titleLink {
+    margin: 0;
+    padding: 10px 18px 10px 21px;
+  }
+  .catalog__square {
+    font-size: 16px;
+  }
+  .catalog__text {
+    margin-bottom: 11px;
+    font-size: 13px;
+    text-align: center;
+  }
   .catalog__tabsNav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    margin-bottom: 15px;
   }
-  .catalog__tabsNav > li {
-    width: 100%;
-    margin-right: 0;
+  .catalog__tabsNav .xbtn {
+    font-weight: 500;
   }
-  .catalog__tabsNav > li:not(:last-child) {
-    margin-bottom: 10px;
+  .catalog__img {
+    border-radius: 15px;
   }
-  .catalog__tabsBtn {
-    width: 100%;
+  .catalog__btns > li .xbtn {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+@media (max-width: 370px) {
+  .catalog__link {
+    height: 51.5vw;
+  }
+  .catalog__priceDesc {
+    display: inline;
+    font-size: 12px;
+  }
+  .catalog__priceText {
+    font-size: 14px;
+  }
+  .catalog__title {
+    font-size: 14px;
+  }
+  .catalog__tabsNav {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    width: calc(100% + 32px);
+    margin-left: -16px;
+    padding: 0 16px 10px;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  .catalog__tabsNav .xbtn {
+    white-space: normal;
   }
 }
 
